--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,32 @@ Session.vim
 *.i*86
 *.x86_64
 *.hex
+
+# Copied from p4
+.*.swp
+*.diff
+*.S
+*.o
+*.d
+*.out
+p4
+t0
+t1
+t2
+t3
+t4
+t5
+t6
+t7
+t8
+t9
+ta
+tb
+tc
+td
+te
+tf
+tg
+th
+ti
+tj
